--- a/homework/index.html
+++ b/homework/index.html
@@ -6,19 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/homework/style.css">
-
+    <script src="https://kit.fontawesome.com/7ceee42a74.js" crossorigin="anonymous"></script>
     <title>Form Builder</title>
 </head>
 
 <body>
 
     <div class="main-container">
+
         <h1>Thyroid Cancer</h1>
         <p id="instructions">Please vote on the questions below. You can opt-out from any question if you need to.</p>
 
+        <!-- Example Question -->
         <div class="question-container">
             <div class="left-container">
-                <label class="opt-out"><input type="checkbox">Opt Out</label>
+                <label class="opt-out" for="opt-out-1">
+                    <input type="checkbox" id="opt-out-1" name="opt-out"> <span class="label-text"> Opt Out</span>
+                </label>
                 <p>1. This is an example question that can be very very very long?</p>
                 <label class="answer"><input type="radio" disabled> Answer 1</label>
                 <label class="answer"><input type="radio" disabled> Answer 2</label>
@@ -26,16 +30,16 @@
             </div>
 
             <div class="right-container">
-                <div class="scores">
+                <div class="clarity-relevance">
                     <div class="clarity-score">
                         <p>Clarity</p>
                         <div class="scale">
                             <label for="">Unclear</label>
-                            <label class="score-label">1<input type="radio"></label>
-                            <label class="score-label">2<input type="radio"></label>
-                            <label class="score-label">3<input type="radio"></label>
-                            <label class="score-label">4<input type="radio"></label>
-                            <label class="score-label">5<input type="radio"></label>
+                            <label for="clarity" class="score-label">1<input name="clarity" type="radio"></label>
+                            <label for="clarity" class="score-label">2<input name="clarity" type="radio"></label>
+                            <label for="clarity" class="score-label">3<input name="clarity" type="radio"></label>
+                            <label for="clarity" class="score-label">4<input name="clarity" type="radio"></label>
+                            <label for="clarity" class="score-label">5<input name="clarity" type="radio"></label>
                             <label for="">Clear</label>
                         </div>
                     </div>
@@ -43,13 +47,13 @@
                     <div class="relevance-score">
                         <p>Relevance</p>
                         <div class="scale">
-                            <label for="">Unclear</label>
-                            <label class="score-label">1<input type="radio"></label>
-                            <label class="score-label">2<input type="radio"></label>
-                            <label class="score-label">3<input type="radio"></label>
-                            <label class="score-label">4<input type="radio"></label>
-                            <label class="score-label">5<input type="radio"></label>
-                            <label for="">Clear</label>
+                            <label for="">Irrelevant</label>
+                            <label for="relevance" class="score-label">1<input name="relevance" type="radio"></label>
+                            <label for="relevance" class="score-label">2<input name="relevance" type="radio"></label>
+                            <label for="relevance" class="score-label">3<input name="relevance" type="radio"></label>
+                            <label for="relevance" class="score-label">4<input name="relevance" type="radio"></label>
+                            <label for="relevance" class="score-label">5<input name="relevance" type="radio"></label>
+                            <label for="">Relevant</label>
                         </div>
                     </div>
                 </div>
@@ -57,35 +61,38 @@
                 <div class="overall-score">
                     <p>Overall</p>
                     <div>
-                        <label for=""><input type="radio">Include</label>
-                        <label for=""><input type="radio">Optional</label>
-                        <label for=""><input type="radio">Do not include</label>
+                        <label for="overall"><input name="overall" type="radio">Include</label>
+                        <label for="overall"><input name="overall" type="radio">Optional</label>
+                        <label for="overall"><input name="overall" type="radio">Do not include</label>
                     </div>
                 </div>
             </div>
         </div>
 
 
-        <div class="question-container">
+        <!-- Example Skipped Question -->
+        <div class="question-container child">
             <div class="left-container">
-                <label class="opt-out"><input type="checkbox">Opt Out</label>
-                <p>2. This is another example question that can be much much much longer?</p>
+                <label class="opt-out" for="opt-out-2">
+                    <input type="checkbox" id="opt-out-2" name="opt-out" checked> <span class="label-text"> Opt Out</span>
+                </label>
+                <p>2. This is another example question that can be much much much much longer? Is it much much much longer than 3 lines?</p>
                 <label class="answer"><input type="radio" disabled> Answer 1</label>
                 <label class="answer"><input type="radio" disabled> Answer 2</label>
                 <label class="answer"><input type="radio" disabled> Answer 3</label>
             </div>
 
-            <div class="right-container">
-                <div class="scores">
+            <div class="right-container inactive">
+                <div class="clarity-relevance">
                     <div class="clarity-score">
                         <p>Clarity</p>
                         <div class="scale">
                             <label for="">Unclear</label>
-                            <label class="score-label">1<input type="radio"></label>
-                            <label class="score-label">2<input type="radio"></label>
-                            <label class="score-label">3<input type="radio"></label>
-                            <label class="score-label">4<input type="radio"></label>
-                            <label class="score-label">5<input type="radio"></label>
+                            <label for="clarity" class="score-label">1<input name="clarity" type="radio"></label>
+                            <label for="clarity" class="score-label">2<input name="clarity" type="radio"></label>
+                            <label for="clarity" class="score-label">3<input name="clarity" type="radio"></label>
+                            <label for="clarity" class="score-label">4<input name="clarity" type="radio"></label>
+                            <label for="clarity" class="score-label">5<input name="clarity" type="radio"></label>
                             <label for="">Clear</label>
                         </div>
                     </div>
@@ -93,13 +100,13 @@
                     <div class="relevance-score">
                         <p>Relevance</p>
                         <div class="scale">
-                            <label for="">Unclear</label>
-                            <label class="score-label">1<input type="radio"></label>
-                            <label class="score-label">2<input type="radio"></label>
-                            <label class="score-label">3<input type="radio"></label>
-                            <label class="score-label">4<input type="radio"></label>
-                            <label class="score-label">5<input type="radio"></label>
-                            <label for="">Clear</label>
+                            <label for="">Irrelevant</label>
+                            <label for="relevance" class="score-label">1<input name="relevance" type="radio"></label>
+                            <label for="relevance" class="score-label">2<input name="relevance" type="radio"></label>
+                            <label for="relevance" class="score-label">3<input name="relevance" type="radio"></label>
+                            <label for="relevance" class="score-label">4<input name="relevance" type="radio"></label>
+                            <label for="relevance" class="score-label">5<input name="relevance" type="radio"></label>
+                            <label for="">Relevant</label>
                         </div>
                     </div>
                 </div>
@@ -107,9 +114,9 @@
                 <div class="overall-score">
                     <p>Overall</p>
                     <div>
-                        <label for=""><input type="radio">Include</label>
-                        <label for=""><input type="radio">Optional</label>
-                        <label for=""><input type="radio">Do not include</label>
+                        <label for="overall"><input name="overall" type="radio">Include</label>
+                        <label for="overall"><input name="overall" type="radio">Optional</label>
+                        <label for="overall"><input name="overall" type="radio">Do not include</label>
                     </div>
                 </div>
             </div>
